cmake_minimum_required(VERSION 3.27)
project(LinkedList)

set(CMAKE_CXX_STANDARD 17)

add_executable(LinkedList main.cpp
        "Printing the elements of a linkedlist.cpp"
        "Insert a node at the tail.cpp"
        "Insert a mode at the head.cpp"
        "delete a node with given index.cpp"
        "Insert a node to given index.cpp"
        Reverseprint.cpp
        Reverseprint.cpp)
