cmake_minimum_required(VERSION 3.27)
project(IEEE_Mini_Extreeme_22_part2)

set(CMAKE_CXX_STANDARD 17)

add_executable(IEEE_Mini_Extreeme_22_part2 main.cpp
        "Swap nodes.cpp"
        "Weighted uniform Strings.cpp"
        "Fraudulent Activity Notifications.cpp"
        "Expression Evaluator.cpp")
